fixing Mac build bustage in nsDogbertProfileMigrator.cpp caused by Bug 394946 checkin